infra/k8s/storage/rook-ceph-cluster/dashboard-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
  namespace: rook-ceph
spec:
  parentRefs:
    - name: atoca-gateway
      namespace: network
      sectionName: https
  hostnames:
    - "ceph.atoca.house"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
